--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "wp-starter-theme",
+  "name": "wildfire-theme",
   "version": "0.0.1",
   "description": "WordPress starter theme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Beth3346/wp-starter-theme.git"
+    "url": "https://github.com/Beth3346/wildfire-theme.git"
   },
   "devDependencies": {
+    "babel-core": "6.26.0",
     "babel-preset-es2015": "^6.14.0",
     "browser-sync": "^2.17.5",
     "del": "^3.0.0",
@@ -30,6 +31,7 @@
     "node-sass": "^4.5.2"
   },
   "dependencies": {
+    "babel-runtime": "6.26.0",
     "elr-sass-utilities": "^3.1.0"
   }
 }
